--- a/config/locales/administrate.zh-CN.yml
+++ b/config/locales/administrate.zh-CN.yml
@@ -21,6 +21,7 @@ zh-CN:
         name: "区域名"
         price: "价格"
         capacity: "人数"
+        klass: "编号"
         created_at: "创建时间"
         updated_at: "更新时间"        
 
