Update dashboard controller

--- a/config/locales/administrate.zh-CN.yml
+++ b/config/locales/administrate.zh-CN.yml
@@ -63,6 +63,13 @@ zh-CN:
       price:
         price: "价格"
 
+      video:
+        name: "视频名"
+        link: "链接"
+        length: "长度"
+        created_at: "创建时间"
+        updated_at: "更新时间"
+
     models:
       user: "用户"
       order: "订单"
@@ -70,6 +77,7 @@ zh-CN:
       area: "区域"
       seat: "座位"
       price: "价位"
+      video: "视频"
 
   administrate:
     actions:
