--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,7 @@ zh-CN:
 
   'Not a administrator': '当前用户非管理员用户'
   'Sorry, some seat has already sold': '该座位已被售出，请选择其他座位'
+  'Please choose at leat one seat then continue': '请至少选择一个座位再继续'
 
   date:
     abbr_day_names:
